Delegates created and some logic
